--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
     "posthtml-include": "^1.4.3",
+    "stylelint": "^13.5.0",
     "stylelint-config-htmlacademy": "0.1.x"
   },
   "scripts": {
@@ -29,8 +30,7 @@
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
-    "start": "gulp start",
-    "images": "gulp images"
+    "start": "gulp start"
   },
   "browserslist": [
     "last 2 versions",
@@ -48,7 +48,5 @@
   "engines": {
     "node": "8.16"
   },
-  "dependencies": {
-    "stylelint": "^13.3.0"
-  }
+  "dependencies": {}
 }
