--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
+    "normalize.less": "^1.0.0",
     "posthtml-include": "^1.4.3",
     "stylelint": "^13.5.0",
     "stylelint-config-htmlacademy": "0.1.x"
